# pythia

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
src/: arguments.rs  event.rs  lib.rs  oracle.rs  subcommand.rs
src/oracle/: event.rs  outcome.rs
src/subcommand/: run.rs  sign.rs  verify.rs
