[package]
name = "pythia"
description = "A DLC oracle"
version = "0.0.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/raphjaph/pythia"
repository = "https://github.com/raphjaph/pythia"
autotests = false
autobins = false

[dependencies]
anyhow = "1.0.95"
bitcoin = "0.32.5"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
secp256k1 = { version =  "0.30.0", features = ["rand", "serde"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
# secp256k1-zkp = { version =  "0.11.0", features = ["std"] }

[dev-dependencies]

[[bin]]
name = "pythia"
path = "src/bin/main.rs"

[lib]
name = "pythia"
path = "src/lib.rs"
