[package]
name = "pythia"
description = "A DLC oracle"
version = "0.0.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/raphjaph/pythia"
repository = "https://github.com/raphjaph/pythia"
autotests = false
autobins = false

[dependencies]
anyhow = "1.0.95"
bitcoin = { version = "0.32.5", features = ["rand", "serde"] }
clap = { version = "4.5.27", features = ["derive"] }
dlc = "0.7.1"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
unicode-normalization = "0.1.24"

[dev-dependencies]
hex = "0.4.3"
schnorr_fun = "0.10.0"
serde_json = "1.0.137"
sha2 = "0.10.8"

[[bin]]
name = "pythia"
path = "src/bin/main.rs"

[lib]
name = "pythia"
path = "src/lib.rs"
